deploying on heroku

--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
         "url": "git+https://github.com/LambdaSchool/node-api3-project.git"
     },
     "dependencies": {
+        "dotenv": "^9.0.0",
+        "dotnav": "^0.0.1",
         "express": "^4.17.1",
         "knex": "^0.95.4",
+        "middleware": "^1.0.0",
         "sqlite3": "^5.0.2"
     },
     "devDependencies": {
